Refactor usage of Wrapper constructors to valueOf
The constructors of Wrapper classes have been deprecated. It is
recommended to use their static valueOf() method. For Boolean the
literals TRUE and FALSE can be used.

Signed-off-by: Karsten Thoms <karsten.thoms@itemis.de>